# pydicom-seg

./: .buildinfo  .flake8  .gitmodules  .pre-commit-config.yaml  LICENSE  README.md  _config.yml  api.html  citation.html  genindex.html  index.html  install.html  license.html  mypy.ini  objects.inv  pyproject.toml  search.html  searchindex.js
.github/workflows/: cd.yaml  ci.yaml
_sources/: citation.rst.txt  license.rst.txt
_sources/guides/: write.rst.txt
docs/: api.rst  conf.py  index.rst  install.rst  motivation.rst
docs/guides/: index.rst  read.rst  seg_types.rst  write.rst
guides/: index.html  read.html  seg_types.html  write.html
pydicom_seg/: __init__.py  dicom_utils.py  reader.py  reader_utils.py  segmentation_dataset.py  template.py  typing.py  writer.py  writer_utils.py
tests/: test_dicom_utils.py  test_reader.py  test_reader_utils.py  test_segmentation_dataset.py  test_template.py  test_writer.py  test_writer_utils.py
