[tool.poetry]
name = "pydicom-seg"
version = "0.1.0"
description = "Python packge for DICOM-SEG medical segmentation file reading and writing"
authors = ["Sven Koitka <sven.koitka@uk-essen.de>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.5"
pydicom = "^1.3.0"
SimpleITK = "^1.2.4"
numpy = "^1.18.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
